# phoenix

docker/: App.Dockerfile
docker/k8s/: echo.yaml
eval/policy/decrypt-server/: attach.toml  detach.toml
eval/policy/encrypt-client/: attach.toml  detach.toml
experimental/mrpc/: Cargo.toml  Makefile.toml  load-mrpc-plugins.toml
experimental/mrpc/examples/cache/: Cargo.toml  build.rs
experimental/mrpc/examples/cache/src/: client.rs  server.rs
experimental/mrpc/examples/proto/cache/: cache.proto
experimental/mrpc/examples/rpc_echo/: Cargo.toml
experimental/mrpc/examples/rpc_echo/src/: client2.rs  server.rs  server_cache.rs
experimental/mrpc/phoenix-api/mrpc/: Cargo.toml
experimental/mrpc/phoenix-api/mrpc/src/: cmd.rs
experimental/mrpc/phoenix-api/policy/cache/: Cargo.toml
experimental/mrpc/phoenix-api/policy/cachehack/: Cargo.toml
experimental/mrpc/phoenix-api/policy/circuitbreaker/: Cargo.toml
experimental/mrpc/phoenix-api/policy/decrypt-server/: Cargo.toml
experimental/mrpc/plugin/mrpc/: Cargo.toml
experimental/mrpc/plugin/mrpc/src/: engine.rs  (+4 more)
experimental/mrpc/src/: rheap.rs
experimental/mrpc/src/stub/: client.rs  local_server.rs  service.rs
src/ipc/src/: control.rs
src/phoenix-api/core/src/: rpc.rs
src/phoenix_common/: Cargo.toml
src/phoenix_common/src/: lib.rs  module.rs  msg_bus.rs
src/phoenix_common/src/engine/: mod.rs
src/phoenixos/src/: control.rs
src/plugin/salloc/src/: module.rs  region.rs
src/plugin/transport-rdma/src/: module.rs
src/plugin/transport-tcp/src/: module.rs
tools/phoenix_cargo/src/: main.rs
(+43 files in other folders)
