[package]
name = "rpc_echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
mrpc-build.workspace = true

[dependencies]
mrpc.workspace = true
prost = { workspace = true, features = ["mrpc-frontend"] }

structopt.workspace = true
smol.workspace = true

log = { version = "0.4" }

time = { version = "0.3", features = ["macros"] }

env_logger = "0.9.0"


[[bin]]
name = "rpc_echo_frontend"
path = "src/frontend.rs"

[[bin]]
name = "rpc_echo_server"
path = "src/server.rs"

[[bin]]
name = "rpc_echo_client"
path = "src/client.rs"

[[bin]]
name = "rpc_echo_client2"
path = "src/client2.rs"
